website/code/fasta-gij.log
BUILD COMMANDS FOR: fasta.gij

Wed Sep 21 00:03:42 PDT 2005

if [ ! -d fasta.gij_run ] ; then mkdir fasta.gij_run ; fi
cp /opt/shootout/shootout/bench/fasta/fasta.gij fasta.gij_run/fasta.java
( cd fasta.gij_run ; /usr/bin/gcj -C -classpath '.' fasta.java )
fasta.java:1: error: Class or interface declaration expected.
   EMPTY
   ^
1 error
make[3]: [fasta.gij_run] Error 1 (ignored)
touch fasta.gij_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 /usr/bin/gij --classpath fasta.gij_run fasta %A
Exception in thread "main" java.lang.NoClassDefFoundError: fasta
   at gnu.java.lang.MainThread.run() (/usr/lib/libgcj.so.6.0.0)
Caused by: java.lang.ClassNotFoundException: fasta not found in gnu.gcj.runtime.SystemClassLoader{urls=[file:fasta.gij_run/,file:./], parent=gnu.gcj.runtime.ExtensionClassLoader{urls=[], parent=null}}
   at java.net.URLClassLoader.findClass(java.lang.String) (/usr/lib/libgcj.so.6.0.0)
   at java.lang.ClassLoader.loadClass(java.lang.String, boolean) (/usr/lib/libgcj.so.6.0.0)
   at java.lang.ClassLoader.loadClass(java.lang.String) (/usr/lib/libgcj.so.6.0.0)
   at java.lang.Class.forName(java.lang.String, boolean, java.lang.ClassLoader) (/usr/lib/libgcj.so.6.0.0)
   at gnu.java.lang.MainThread.run() (/usr/lib/libgcj.so.6.0.0)
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
